WIP: tests Java 11 ready